fix(front): prevents page jump on pagenav toggle (#956)
Closes: #956

--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -87,7 +87,7 @@
     color: var(--fg-clr);
   }
   input#page-navigation-checkbox {
-    position: absolute;
+    position: relative;
     opacity: 0;
     outline: none;
     border-radius: 0.33rem;
