feat(front): adds svg implementation to skills pages (#991)
Closes: #991

--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -33,6 +33,18 @@
   }
 }
 
-.main h1.collection-title {
-  font-size: 12rem;
+.main .meat h1.collection-title {
+  position: relative;
+  height: auto;
+  font-size: 9rem;
+  line-height: 1;
+  .skill-icon {
+    display: inline-block;
+    padding-right: 1rem;
+    width: 3rem;
+    height: 3rem;
+    svg {
+      height: 100%;
+    }
+  }
 }
