feat(front): adds styles and video display to projects route and api' (#997)
Closes: #997

--- a/front/src/lib/styles/base/transitions.css
+++ b/front/src/lib/styles/base/transitions.css
@@ -87,5 +87,6 @@ body.ready.animating {
   .main .transition-container:last-of-type {
     height: 0;
     max-height: 0;
+    overflow: hidden;
   }
 }
