--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -79,6 +79,7 @@ body {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   background-color: var(--fg-clr);
   height: 0.5rem;
+  transform: translateZ(0);
 }
 
 #main {
