--- a/front/src/lib/styles/pages/privacy.css
+++ b/front/src/lib/styles/pages/privacy.css
@@ -59,6 +59,10 @@
     li:first-of-type {
       margin-bottom: 1.25rem;
     }
+    li > p {
+      margin: 0;
+      padding: 0;
+    }
     ol {
       margin-bottom: 1.25rem;
       margin-left: 1rem;
