--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -73,6 +73,7 @@
       var(--sunshine),
       var(--content-bg-clr) 333px
     );
+    --primary-clr: var(--violet);
     --fg-clr: var(--violet);
     --fg-clr-o: var(--violet-a90);
     --fg-clr-oo: var(--violet-a75);
@@ -154,6 +155,7 @@ html.light-theme {
     var(--sunshine),
     var(--content-bg-clr) 333px
   );
+  --primary-clr: var(--violet);
   --fg-clr: var(--violet);
   --fg-clr-o: var(--violet-a90);
   --fg-clr-oo: var(--violet-a75);
@@ -227,6 +229,7 @@ html.light-theme {
 @media (prefers-color-scheme: dark) {
   :root {
     --fg-clr: var(--moon);
+    --primary-clr: var(--celestial);
     --fg-clr-o: var(--celestial-a90);
     --fg-clr-oo: var(--celestial-a75);
     --fg-clr-ooo: var(--celestial-a50);
@@ -321,6 +324,7 @@ html.dark-theme {
     var(--content-bg-clr) 333px
   );
   --shadow-color: var(--moonshine-shadow-clr);
+  --primary-clr: var(--celestial);
   --rim-clr: var(--moonshine);
   --link-clr: var(--fg-clr-oo);
   --link-clr--hover: var(--celestial);
